--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,15 @@ div#container {
     margin: auto;
     background-color: rgb(255, 210, 247);
   }
-  
+  p{
+    font-size: 16px;
+    text-align: center;
+  }
+  body{
+    background-color: rgb(255, 210, 247);
+    margin:0;
+    font-family: 'Roboto', sans-serif;
+  }
   svg {
     width: 100%;
     height: 100%;
